--- a/section3_task.Rmd
+++ b/section3_task.Rmd
@@ -9,4 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 library(palmerpenguins)
 library(tidyverse)
+usethis::use_git()
+usethis::use_github()
 ```
+
