--- a/section3_task.Rmd
+++ b/section3_task.Rmd
@@ -7,9 +7,51 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+```
+
+```{r}
 library(palmerpenguins)
 library(tidyverse)
-usethis::use_git()
-usethis::use_github()
+
+### usethis::use_git()
+###usethis::use_github()
+
+```
+##Find the derivative expression and slope for each of the following functions:
+A. $f(x) = x^2$ at $x=2$
+B. $P(a) = 2(3a + 2)^4 - 5$ at $a = 1.2$
+C. $g(t) = (-4t)/(t^2+1)^3$ at $t = 0$
+
+```{r}
+#A
+functionA <- expression(x^2)
+functionA_prime <- deriv(functionA, "x")
+
+x <- 3
+
+eval(functionA_prime)
+```
+
+```{r}
+
+functionB <- expression(2*(a + 2)^4 - 5)
+functionB
+
+functionB_prime <- deriv(functionB, "a")
+
+a <- 1.2
+
+eval(functionA_prime)
+
+```
+```{r}
+function_C <- expression((-4*t)/(t^2+1))
+function_Cprime <- deriv(function_C, "t")
+
+t <- 0
+
+eval(function_Cprime)
+
+
 ```
 
